# fastapi-masterclass-catalin

./: .gitignore  README.md
03-get-method/: Dockerfile
03-get-method/app/: main.py
04-operation-description/: pyproject.toml
04-operation-description/app/: main.py
05-routers/app/: main.py
05-routers/app/router/: blog_post.py
06-parameters/app/router/: blog_post.py
07-sqlalchemy/: Dockerfile  pyproject.toml
07-sqlalchemy/app/: main.py  schemas.py
07-sqlalchemy/app/db/: database.py  db_user.py  models.py
07-sqlalchemy/app/router/: article.py  blog_get.py  blog_post.py  user.py
08-concepts/: pyproject.toml
08-concepts/app/: exceptions.py  main.py
08-concepts/app/db/: db_article.py
08-concepts/app/router/: product.py  user.py
09-authentication/: Dockerfile
09-authentication/app/: main.py
09-authentication/app/auth/: oauth2.py
09-authentication/app/db/: db_user.py
09-authentication/app/router/: article.py  user.py
10-files/: pyproject.toml
10-files/app/: main.py
10-files/app/auth/: authentication.py
10-files/app/router/: file.py
11-tasks/: pyproject.toml  test_main.py
11-tasks/app/: custom_log.py  main.py
11-tasks/app/auth/: oauth2.py
11-tasks/tests/: test_main.py
12-more-concepts/: pyproject.toml
12-more-concepts/app/: main.py
12-more-concepts/app/router/: file.py  product.py
12-more-concepts/app/templates/: product.html  templates.py
13-dependencies/: pyproject.toml
13-dependencies/app/: client.py  custom_log.py  main.py  schemas.py
13-dependencies/app/db/: db_article.py  hash.py
13-dependencies/app/router/: dependencies.py
13-dependencies/app/templates/: templates.py
13-dependencies/app/templates/static/: styles.css
14-ocr/: docker-compose.yml  pyproject.toml
14-ocr/app/: main.py
15-blog/: docker-compose.yml
15-blog/api/: Dockerfile  pyproject.toml
15-blog/api/app/: main.py
15-blog/api/app/database/: db_post.py  models.py
15-blog/api/app/routers/: post.py  schemas.py
15-blog/web/src/: App.css  App.js  NewPost.css  NewPost.js  Post.css  Post.js
15-prj-blog/api/: Dockerfile  blog_api.db
15-prj-blog/api/app/: main.py
15-prj-blog/api/app/database/: database.py
15-prj-blog/api/app/routers/: post.py
15-prj-blog/web/src/: App.js
17-prj-instagram/api/: Dockerfile  pyproject.toml
17-prj-instagram/api/app/: main.py
17-prj-instagram/api/app/auth/: authentication.py  oauth2.py
17-prj-instagram/api/app/db/: database.py  db_comment.py  db_post.py  db_user.py  hashing.py  models.py
17-prj-instagram/api/app/routers/: comment.py  post.py  schemas.py  user.py
17-prj-instagram/web/: package-lock.json  package.json
17-prj-instagram/web/src/: App.css  App.js  ImageUpload.css  ImageUpload.js  Post.css  Post.js
20-prj-warehouse/: docker-compose.yml
20-prj-warehouse/api-store/: Dockerfile  config.py  main.py  pyproject.toml  update.py
20-prj-warehouse/api-store/app/: config.py  main.py
20-prj-warehouse/api-warehouse/: Dockerfile  fulfillment.py  main.py  pyproject.toml
20-prj-warehouse/api-warehouse/app/: config.py  fulfillment.py  main.py
20-prj-warehouse/api-warehouse/app/redis/: services.py
20-prj-warehouse/web/: package-lock.json  package.json
20-prj-warehouse/web/src/: App.css  App.js
20-prj-warehouse/web/src/routes/: Order.js  ProductCreate.js  Products.css  Products.js
