[tool.poetry]
name = "fastapi-catalin-13-dependencies"
version = "0.1.0"
description = ""
authors = ["Noah Kim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
